--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
     "flow-bin": "^0.200.0"
   }
 }
