--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "graphql": "^16.6.0",
     "graphql-playground": "^1.3.17",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
